# Krepost-V3

./: AGENTS.md  README.md  ROADMAP.md  pyproject.toml
Ataker-boop/: .gitignore
Krepost/01-ARCHITECTURE/: 01-01-9-CAMNI.md  01-02-PHYSICAL-ISOLATION.md  01-03-THREAT-MODEL.md  01-04-HARDWARE.md
Krepost/07-RESEARCH/: Hopfield-Memory-paper.md  KVEraser-paper.md  LedgerAgent-paper.md  OCC-RAG-paper.md
Probnoki/: TASK_CONTRACT_DRAFT.md  task_contract_draft.py  test_03_circuit_breaker.py  test_05_base64_limits.py  test_09_base64_architecture.py  test_18_regex_filter.py  test_21_orchestration.py  test_50_semantic_chunker.py  test_51_tool_truncation.py
_handoff/: LATEST.md
krepost/api/: server.py
krepost/governance/: __init__.py
krepost/memory/: chunker.py  store.py
krepost/orchestration/: __init__.py  backends.py  factory.py  router.py  tools.py
krepost/security/: normalize.py  pipeline.py  tool_guard.py  trust_registry.py
tests/: test_fewshot_matcher.py  test_pipeline.py
предложения/: 07-sovereign-brokers.md
